--- a/boot_shutdown_manager/CMakeLists.txt
+++ b/boot_shutdown_manager/CMakeLists.txt
@@ -13,6 +13,18 @@ ament_auto_add_executable(boot_shutdown_manager_node
 )
 target_link_libraries(boot_shutdown_manager_node boot_shutdown_manager)
 
+if(BUILD_TESTING)
+  ament_add_ros_isolated_gtest(test_boot_shutdown_manager
+    test/src/test_boot_shutdown_manager.cpp
+  )
+  target_link_libraries(test_boot_shutdown_manager boot_shutdown_manager)
+  target_include_directories(test_boot_shutdown_manager PRIVATE include)
+  ament_target_dependencies(test_boot_shutdown_manager
+    rclcpp
+    boot_shutdown_api_msgs
+    tier4_api_utils
+  )
+endif()
 
 ament_auto_package(
   INSTALL_TO_SHARE
