feat(boot_shutdown_interface): add boot_shutdown_interface for cpp
Signed-off-by: v-nakayama7440-esol <v-nakayama7440@esol.co.jp>

--- a/boot_shutdown_api_msgs/CMakeLists.txt
+++ b/boot_shutdown_api_msgs/CMakeLists.txt
@@ -22,7 +22,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   srv/Shutdown.srv
   DEPENDENCIES
     builtin_interfaces
-    autoware_ad_api_msgs
+    autoware_adapi_v1_msgs
 )
 
 if(BUILD_TESTING)
