--- a/boot_shutdown_api_msgs/package.xml
+++ b/boot_shutdown_api_msgs/package.xml
@@ -15,7 +15,7 @@
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <depend>autoware_ad_api_msgs</depend>
+  <depend>autoware_adapi_v1_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
