fix(boot_shutdown_interface): make node component and make subscribe topic setting to ROS parameter
Signed-off-by: v-nakayama7440-esol <v-nakayama7440@esol.co.jp>

--- a/boot_shutdown_interface/config/boot_shutdown.param.yaml
+++ b/boot_shutdown_interface/config/boot_shutdown.param.yaml
@@ -4,3 +4,9 @@
     preparation_timeout: 180
     debug:
       preparation_delay: 5
+
+    topic_config:
+      name: "/bagpacker/state"
+      type: "std_msgs/msg/String"
+      transient_local: False
+      best_effort: False
