--- a/boot_shutdown_interface/package.xml
+++ b/boot_shutdown_interface/package.xml
@@ -12,9 +12,9 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>boot_shutdown_api_msgs</depend>
-  <depend>std_msgs</depend>
   <depend>fmt</depend>
   <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
 
   <test_depend>ament_lint_auto</test_depend>
 
