fix(boot_shutdown_interface): change design of ROS parameters and remove unnecessary code
Signed-off-by: v-nakayama7440-esol <v-nakayama7440@esol.co.jp>

--- a/boot_shutdown_interface/config/boot_shutdown.param.yaml
+++ b/boot_shutdown_interface/config/boot_shutdown.param.yaml
@@ -1,9 +1,8 @@
 /**:
   ros__parameters:
     startup_timeout: 180
-    preparation_timeout: 180
-    debug:
-      preparation_delay: 5
+    prepare_shutdown_time: 1
+    execute_shutdown_time: 13
 
     topic_config:
       name: "/bagpacker/state"
