--- a/boot_shutdown_interface/CMakeLists.txt
+++ b/boot_shutdown_interface/CMakeLists.txt
@@ -13,15 +13,16 @@ ament_auto_add_executable(boot_shutdown_interface
   src/boot_shutdown_interface_node.cpp
 )
 
-ament_auto_add_executable(boot_shutdown_host
-src/boot_shutdown_host.cpp
+ament_auto_add_executable(boot_shutdown_service
+  src/service/boot_shutdown_main.cpp
+  src/service/boot_shutdown_service.cpp
 )
 
 ament_auto_add_library(boot_shutdown_guest_lib SHARED
   src/boot_shutdown_guest.cpp
 )
 
-target_link_libraries(boot_shutdown_host ${Boost_LIBRARIES})
+target_link_libraries(boot_shutdown_service ${Boost_LIBRARIES})
 target_link_libraries(boot_shutdown_guest_lib ${Boost_LIBRARIES})
 
 rclcpp_components_register_node(boot_shutdown_guest_lib
