--- a/boot_shutdown_interface/config/boot_shutdown.param.yaml
+++ b/boot_shutdown_interface/config/boot_shutdown.param.yaml
@@ -5,7 +5,7 @@
     execute_shutdown_time: 13
 
     topic_config:
-      name: "/bagpacker/state"
-      type: "std_msgs/msg/String"
+      name: "/autoware/state"
+      type: "autoware_auto_system_msgs/msg/AutowareState"
       transient_local: False
       best_effort: False
