feat(boot_shutdown): support daemon process and docker
Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/boot_shutdown_interface/CMakeLists.txt
+++ b/boot_shutdown_interface/CMakeLists.txt
@@ -3,7 +3,8 @@ project(boot_shutdown_interface)
 
 find_package(ament_cmake_auto REQUIRED)
 find_package(Boost REQUIRED COMPONENTS
-  filesystem
+  serialization
+  system
 )
 
 ament_auto_find_build_dependencies()
@@ -12,9 +13,27 @@ ament_auto_add_library(boot_shutdown_interface_node SHARED
   src/boot_shutdown_interface.cpp
 )
 
+ament_auto_add_executable(boot_shutdown_service
+  src/service/boot_shutdown_main.cpp
+  src/service/boot_shutdown_service.cpp
+)
+
+ament_auto_add_library(boot_shutdown_guest_lib SHARED
+  src/boot_shutdown_guest.cpp
+)
+
+target_link_libraries(boot_shutdown_interface_node ${Boost_LIBRARIES})
+target_link_libraries(boot_shutdown_service ${Boost_LIBRARIES})
+target_link_libraries(boot_shutdown_guest_lib ${Boost_LIBRARIES})
+
 rclcpp_components_register_node(boot_shutdown_interface_node
   PLUGIN "boot_shutdown_interface::BootShutdownInterface"
   EXECUTABLE boot_shutdown_interface
+)
+
+rclcpp_components_register_node(boot_shutdown_guest_lib
+  PLUGIN "boot_shutdown_interface::BootShutdownGuest"
+  EXECUTABLE boot_shutdown_guest
 )
 
 ament_auto_package(
