--- a/boot_shutdown_api_msgs/package.xml
+++ b/boot_shutdown_api_msgs/package.xml
@@ -18,7 +18,7 @@
   <depend>autoware_adapi_v1_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>autoware_lint_common</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
