fix topic config
Signed-off-by: khtan <tkh.my.p@gmail.com>

--- a/boot_shutdown_interface/config/topic_config.param.yaml
+++ b/boot_shutdown_interface/config/topic_config.param.yaml
@@ -1,7 +1,7 @@
 /**:
   ros__parameters:
     topic_config:
-      name: ""
-      type: ""
+      name: "/autoware/state"
+      type: "autoware_auto_system_msgs/msg/AutowareState"
       transient_local: False
       best_effort: False
