--- a/boot_shutdown_interface/config/boot_shutdown.param.yaml
+++ b/boot_shutdown_interface/config/boot_shutdown.param.yaml
@@ -9,3 +9,5 @@
       type: "autoware_auto_system_msgs/msg/AutowareState"
       transient_local: False
       best_effort: False
+
+    additional_prepare_shutdown_command: [""]
