--- a/boot_shutdown_manager/package.xml
+++ b/boot_shutdown_manager/package.xml
@@ -15,6 +15,7 @@
   <depend>fmt</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>std_srvs</depend>
   <depend>tier4_api_utils</depend>
 
   <test_depend>ament_lint_auto</test_depend>
