--- a/boot_shutdown_manager/CMakeLists.txt
+++ b/boot_shutdown_manager/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 project(boot_shutdown_manager)
 
-find_package(autoware_cmake REQUIRED)
-autoware_package()
+find_package(ament_cmake_auto REQUIRED)
+
+ament_auto_find_build_dependencies()
 
 
 ament_auto_add_executable(boot_shutdown_manager
