--- a/boot_shutdown_manager/package.xml
+++ b/boot_shutdown_manager/package.xml
@@ -9,17 +9,14 @@
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
-  <build_depend>autoware_cmake</build_depend>
-
   <depend>boot_shutdown_api_msgs</depend>
   <depend>fmt</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>std_srvs</depend>
-  <depend>tier4_api_utils</depend>
 
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>autoware_lint_common</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
