--- a/boot_shutdown_service/package.xml
+++ b/boot_shutdown_service/package.xml
@@ -9,11 +9,11 @@
 
   <license>Apache License 2.0</license>
 
-  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+  <buildtool_depend>cmake</buildtool_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
+  <depend>boost</depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>cmake</build_type>
   </export>
 </package>
