fix(docker): modify Dockerfile
Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,8 +3,9 @@ ARG L4T_RELEASE=32
 ARG L4T_REVISION_MAJOR=6
 ARG L4T_REVISION_MINOR=1
 ARG L4T_VERSION=$L4T_RELEASE.$L4T_REVISION_MAJOR.$L4T_REVISION_MINOR
+ARG L4T_IMAGE=dustynv/ros:galactic-ros-base-l4t-r$L4T_VERSION
 
-FROM dustynv/ros:galactic-ros-base-l4t-r$L4T_VERSION AS base
+FROM $L4T_IMAGE AS base
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -27,7 +28,7 @@ WORKDIR $OVERLAY_WS
 
 RUN . /opt/ros/$ROS_DISTRO/install/setup.sh && \
     colcon build \
-        --cmake-args -DCMAKE_BUILD_TYPE=Release --packages-up-to boot_shutdown_interface
+        --cmake-args -DCMAKE_BUILD_TYPE=Release --merge-install --packages-up-to boot_shutdown_interface
 
 ENV OVERLAY_WS=${OVERLAY_WS}
 
