fix(docker): change Dockerfile
Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,9 @@
 ARG OVERLAY_WS=/opt/ros/overlay_ws
-ARG L4T_RELEASE=32
-ARG L4T_REVISION_MAJOR=6
-ARG L4T_REVISION_MINOR=1
-ARG L4T_VERSION=$L4T_RELEASE.$L4T_REVISION_MAJOR.$L4T_REVISION_MINOR
-ARG L4T_IMAGE=dustynv/ros:galactic-ros-base-l4t-r$L4T_VERSION
+ARG BASE_REPOSITORY=dustynv/ros
+ARG BASE_TAG=galactic-ros-base-l4t-r32.6.1
+ARG BASE_IMAGE=$BASE_REPOSITORY:$BASE_TAG
 
-FROM $L4T_IMAGE AS base
+FROM $BASE_IMAGE AS base
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -13,9 +11,6 @@ RUN apt-get update \
          libfmt-dev \
          libboost-dev \
     && rm -rf /var/lib/apt/list/*
-
-
-FROM base AS builder
 
 ARG OVERLAY_WS
 WORKDIR $OVERLAY_WS/src
