--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,10 @@ ARG BASE_IMAGE=$BASE_REPOSITORY:$BASE_TAG
 
 FROM $BASE_IMAGE AS base
 
+RUN wget -q -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
+    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ bionic main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null \
+    && sed -i 's|deb https://apt.kitware.com/ubuntu/ bionic main|#&|g' /etc/apt/sources.list
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
          geographiclib-tools \
