feat(boot_shutdown_service): add non-ros communication interface
Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/boot_shutdown_service/CMakeLists.txt
+++ b/boot_shutdown_service/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Boost REQUIRED COMPONENTS
   serialization
 )
 find_package(Threads REQUIRED)
+find_package(yaml-cpp REQUIRED)
 
 add_library(${PROJECT_NAME} SHARED
   src/boot_shutdown_service.cpp
@@ -13,11 +14,16 @@ add_library(${PROJECT_NAME} SHARED
 target_link_libraries(${PROJECT_NAME} PRIVATE
   Boost::serialization
   Threads::Threads
+  yaml-cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../boot_shutdown_internal_msgs/include>"
+  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../boot_shutdown_udp/include>"
   "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
+  "$<INSTALL_INTERFACE:include/boot_shutdown_internal_msgs>"
+  "$<INSTALL_INTERFACE:include/boot_shutdown_udp>"
 )
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
