--- a/boot_shutdown_service/CMakeLists.txt
+++ b/boot_shutdown_service/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(${PROJECT_NAME}_main
 
 target_link_libraries(${PROJECT_NAME}_main
   ${PROJECT_NAME}
+  pthread
 )
 
 set_target_properties(${PROJECT_NAME}_main PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
