feat(boot_shutdown_manager): remove ROS dependency from ECU communication (#30)
* feat(boot_shutdown_manager): remove ROS dependency from ECU communication

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* fix(boot_shutdown_manager): fix build error

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* feat(boot_shutdown_manager): use parameters for communication between ECIs

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* fix(boot_shutdown_manager): fix build error

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* fix(boot_shutdown_manager): rename package from boot_shutdown_udp to boot_shutdown_communication

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* fix(boot_shutdown_manager): change parameter and fix timeout calculation

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* fix(boot_shutdown_manager): set primary value

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* fix(boot_shutdown_manager): check for null response from cli_execute call

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

* Revert "fix(boot_shutdown_manager): check for null response from cli_execute call"

This reverts commit 55fb6c4d8562a09add7e931d54cb0db0dc3d33cc.

* fix(boot_shutdown_manager): add error handling for service call

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

---------

Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/boot_shutdown_manager/config/boot_shutdown_manager.param.yaml
+++ b/boot_shutdown_manager/config/boot_shutdown_manager.param.yaml
@@ -5,6 +5,9 @@
 #       prepare: {PrepareShutdown service name}
 #       execute: {Executeshutdown service name}
 #       skip_shutdown: {when true, the manager do not execute shutdown for this unit}
+#       service_address: nNetwork address used to interact with the ECU’s shutdown-related services
+#       prepare_shutdown_port: Port number used for the shutdown preparation service of the ECU
+#       execute_shutdown_port: Port number used for the shutdown execution service of the ECU
 #
 # Note:
 # default values are:
@@ -13,18 +16,25 @@
 #   execute: /api/{ecu_name}/execute_shutdown
 #   primary: false
 #   skip_shutdown: false
+#   service_address: 127.0.0.1
+#   prepare_shutdown_port: 10001
+#   execute_shutdown_port: 10002
 ---
 /**:
   ros__parameters:
     update_rate: 1.0
     startup_timeout: 60.0
     preparation_timeout: 10.0
+    topic_port: 10000
+    service_timeout: 1
     managed_ecu:
       autoware_ecu:
         state: /autoware_ecu/get/ecu_state
         prepare: /api/autoware_ecu/prepare_shutdown
         execute: /api/autoware_ecu/execute_shutdown
         primary: true
+        service_address: 192.168.20.11
       mot:
         skip_shutdown: true 
-      logging: default
+      logging:
+        service_address: 192.168.20.71
