fix(boot_shutdown): use protobuf instead of boost serialization
Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/boot_shutdown_internal_msgs/CMakeLists.txt
+++ b/boot_shutdown_internal_msgs/CMakeLists.txt
@@ -1,16 +1,43 @@
 cmake_minimum_required(VERSION 3.10.2)
 project(boot_shutdown_internal_msgs)
 
-add_library(${PROJECT_NAME} INTERFACE)
+find_package(Protobuf REQUIRED)
 
-target_include_directories(${PROJECT_NAME} INTERFACE
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+set(PROTO_FILES
+  proto/${PROJECT_NAME}/msg/ecu_state_message.proto
+  proto/${PROJECT_NAME}/msg/header.proto
+  proto/${PROJECT_NAME}/msg/response_status.proto
+  proto/${PROJECT_NAME}/srv/execute_shutdown_service.proto
+  proto/${PROJECT_NAME}/srv/prepare_shutdown_service.proto
 )
+
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})
+
+add_library(${PROJECT_NAME} STATIC ${PROTO_SRCS})
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+  ${Protobuf_INCLUDE_DIRS}
+)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC
+  ${Protobuf_LIBRARIES}
+)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
+
+install(FILES ${PROTO_HDRS} DESTINATION include/${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME}
   EXPORT export_${PROJECT_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
 )
-install(DIRECTORY include/ DESTINATION include/${PROJECT_NAME})
+
+install(FILES ${PROTO_HDRS} DESTINATION include/${PROJECT_NAME})
+
+install(EXPORT export_${PROJECT_NAME}
+  FILE ${PROJECT_NAME}Config.cmake
+  DESTINATION lib/cmake/${PROJECT_NAME}
+)
