--- a/localhost_shutdown/package.xml
+++ b/localhost_shutdown/package.xml
@@ -10,6 +10,7 @@
 
   <buildtool_depend>cmake</buildtool_depend>
 
+  <depend>boot_shutdown_internal_msgs</depend>
   <depend>boost</depend>
 
   <export>
