--- a/localhost_shutdown/CMakeLists.txt
+++ b/localhost_shutdown/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.10.2)
 project(localhost_shutdown)
 
-find_package(Boost REQUIRED COMPONENTS
-  serialization
-)
+find_package(boot_shutdown_internal_msgs REQUIRED)
 find_package(Threads REQUIRED)
 
 add_executable(${PROJECT_NAME}
@@ -13,7 +11,7 @@ add_executable(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME} PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../boot_shutdown_internal_msgs/include>"
+  "$<BUILD_INTERFACE:${CMAKE_INSTALL_PREFIX}/../boot_shutdown_internal_msgs/include>"
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../boot_shutdown_communication/include>"
   "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
   "$<INSTALL_INTERFACE:include/boot_shutdown_internal_msgs>"
@@ -25,9 +23,9 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
 )
 
 target_link_libraries(${PROJECT_NAME}
-  Boost::serialization
   Threads::Threads
   pthread
+  boot_shutdown_internal_msgs
 )
 
 install(TARGETS ${PROJECT_NAME}
