chore(boot_shutdown_internal_msgs): add dependency
Signed-off-by: ito-san <fumihito.ito@tier4.jp>

--- a/boot_shutdown_internal_msgs/package.xml
+++ b/boot_shutdown_internal_msgs/package.xml
@@ -9,6 +9,7 @@
   <license>Apache License 2.0</license>
 
   <buildtool_depend>cmake</buildtool_depend>
+  <depend>protobuf-dev</depend>
 
   <depend>boost</depend>
 
