feat(localhost_shutdown): wait for SHUTDOWN_READY state before shutting down

--- a/localhost_shutdown/CMakeLists.txt
+++ b/localhost_shutdown/CMakeLists.txt
@@ -3,6 +3,7 @@ project(localhost_shutdown)
 
 find_package(boot_shutdown_internal_msgs REQUIRED)
 find_package(Threads REQUIRED)
+find_package(yaml-cpp REQUIRED)
 
 add_executable(${PROJECT_NAME}
   src/localhost_shutdown.cpp
@@ -13,8 +14,10 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
   "$<BUILD_INTERFACE:${CMAKE_INSTALL_PREFIX}/../boot_shutdown_internal_msgs/include>"
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../boot_shutdown_communication/include>"
+  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../boot_shutdown_common/include>"
   "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
   "$<INSTALL_INTERFACE:include/boot_shutdown_internal_msgs>"
+  "$<INSTALL_INTERFACE:include/boot_shutdown_common>"
   "$<INSTALL_INTERFACE:include/boot_shutdown_communication>"
 )
 
@@ -25,6 +28,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
 target_link_libraries(${PROJECT_NAME}
   Threads::Threads
   pthread
+  yaml-cpp
   boot_shutdown_internal_msgs
 )
 
