--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,9 +5,14 @@ ARG BASE_IMAGE=$BASE_REPOSITORY:$BASE_TAG
 
 FROM $BASE_IMAGE AS base
 
-RUN wget -q -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null \
-    && echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ bionic main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null \
-    && sed -i 's|deb https://apt.kitware.com/ubuntu/ bionic main|#&|g' /etc/apt/sources.list
+RUN apt-get update \
+  && apt-get install -y ca-certificates curl
+# hadolint ignore=SC1091
+RUN export ROS_APT_SOURCE_VERSION=$(curl -s https://api.github.com/repos/ros-infrastructure/ros-apt-source/releases/latest | grep -F "tag_name" | awk -F\" '{print $4}') ;\
+  curl -L -s -o /tmp/ros2-apt-source.deb "https://github.com/ros-infrastructure/ros-apt-source/releases/download/${ROS_APT_SOURCE_VERSION}/ros2-apt-source_${ROS_APT_SOURCE_VERSION}.$(. /etc/os-release && echo "$VERSION_CODENAME")_all.deb" \
+  && apt-get update \
+  && apt-get install -y /tmp/ros2-apt-source.deb \
+  && rm -f /tmp/ros2-apt-source.deb
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
