chore: update maintainer

--- a/boot_shutdown_internal_msgs/package.xml
+++ b/boot_shutdown_internal_msgs/package.xml
@@ -4,6 +4,7 @@
   <name>boot_shutdown_internal_msgs</name>
   <version>0.1.0</version>
   <description>The boot_shutdown_internal_msgs package</description>
+  <maintainer email="masaki.nishikawa@tier4.jp">Masaki Nishikawa</maintainer>
   <maintainer email="fumihito.ito@tier4.jp">Fumihito Ito</maintainer>
 
   <license>Apache License 2.0</license>
