--- a/boot_shutdown_api_msgs/package.xml
+++ b/boot_shutdown_api_msgs/package.xml
@@ -4,7 +4,8 @@
   <name>boot_shutdown_api_msgs</name>
   <version>0.0.0</version>
   <description>The boot_shutdown_api_msgs package</description>
-  <maintainer email="shinnosuke.hirakawa@tier4.jp">Shinnosuke Hirakawa</maintainer>
+  <maintainer email="masaki.nishikawa@tier4.jp">Masaki Nishikawa</maintainer>
+  <maintainer email="fumihito.ito@tier4.jp">Fumihito Ito</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
