feat(boot_shutdown_manager): add topic_condition_evaluator

--- a/boot_shutdown_api_msgs/CMakeLists.txt
+++ b/boot_shutdown_api_msgs/CMakeLists.txt
@@ -17,6 +17,7 @@ ament_auto_find_build_dependencies()
 rosidl_generate_interfaces(${PROJECT_NAME}
   msg/EcuState.msg
   msg/EcuStateSummary.msg
+  msg/ShutdownReadyState.msg
   srv/ExecuteShutdown.srv
   srv/PrepareShutdown.srv
   srv/Shutdown.srv
