--- a/boot_shutdown_manager/config/boot_shutdown_manager.param.yaml
+++ b/boot_shutdown_manager/config/boot_shutdown_manager.param.yaml
@@ -15,6 +15,10 @@
 #         logic: [AND, OR] condition for fields within topic
 #         {field_name}: A condition [eq, ne, le, lt, ge, gt, contains, not_contains]: {value} applied to the message field
 #
+#   aggregation_timeout_sec: 60.0 Maximum time (in seconds) to wait for all ECUs to respond
+#                                 during prepare or execute shutdown aggregation.
+#                                 If exceeded, remaining ECUs are logged as timeout.
+#
 # Note:
 # default values are:
 #   state: /{ecu_name}/get/ecu_state
@@ -37,6 +41,7 @@
     preparation_timeout: 10.0
     topic_port: 10000
     service_timeout: 1
+    aggregation_timeout_sec: 60.0
     managed_ecu:
       autoware_ecu:
         state: /autoware_ecu/get/ecu_state
